<?xml version="1.0" encoding="utf-8"?>
<tabs>
    <tab
        id="+id/show_end_home"
        icon="@drawable/ic_home_black_24dp"
        inActiveColor="@color/colorNvBG"
        activeColor="@color/colorMaster"
        title="@string/tab_menu_home" />
    <tab
        id="+id/show_end_put"
        icon="@drawable/ic_put_black_24dp"
        inActiveColor="@color/colorNvBG"
        activeColor="@color/colorMaster"
        title="@string/tab_menu_put" />

    <tab
        id="+id/show_end_find"
        icon="@drawable/ic_find_black_24dp"
        inActiveColor="@color/colorNvBG"
        activeColor="@color/colorMaster"
        title="@string/tab_menu_find" />

    <tab
        id="+id/show_end_mine"
        icon="@drawable/ic_mine_black_24dp"
        inActiveColor="@color/colorNvBG"
        activeColor="@color/colorMaster"
        title="@string/tab_menu_mine" />
    <!--inActiveColor="@color/colorBelowBG"-->
    <!--activeColor="@color/colorMaster"-->
</tabs>
